[package]
name = "jkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
rocket = "=0.5.0-rc.3"
md5 = "0.7.0"
base64 = "0.21.4"
heed = "0.11.0"
