[package]
name = "jkv"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_sqlite"] }
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
rocket = "=0.5.0-rc.3"
md5 = "0.7.0"
base64 = "0.21.4"
sqlx = { version = "0.6", features = ["macros"], default-features = false }
sqlx-cli = { version = "0.6", default-features = false, features = ["sqlite"] }
